# clusterpoems

./: .gitignore  README.md  clustering_sklearn.ipynb  k_means_implementation.ipynb  pyproject.toml  requirements.txt
app/: agglomerative_clustering.ipynb  agglomerative_clustering.py  all.out  altered_amann.out  amann.out  amann_dbscan2.out  amann_dbscan_svd.out  amann_gmm.out  amann_kmeans2.out  amann_kmeans_noise.out  amann_noiseless.out  amann_rd_noiseless.out  barock_correction.out  barockspell.out  classification.ipynb  clustering_evaluation.ipynb  clustering_whole_corpus.ipynb  corpus_exploring.ipynb  corpus_modification.ipynb  create_linkage.py  epochs.json  epochs_addition.json  evaluation.ipynb  gmm.out  gmm2.out  hierarchical_clustering.ipynb  linguistic_development.ipynb  lsvm.out  mlclf_lsvm.py  noise_detection.ipynb  noise_red.out  pipe.py  run_pipe.py  test.ipynb  utils.py
corpora/: german_wiki_small.csv
literature & presentation/: clustering_presentation.pptx  ~$clustering_presentation.pptx
presentation/: clustering_presentation.pptx
project/: jannidis_cluster_visuell.ipynb  k_means_implementation.ipynb  k_means_template.ipynb  part1_corpus.ipynb  part2_corpus_exploring.ipynb  part3_dimension_reduction.ipynb  testing.ipynb
results/: dbscan_results_amann.json  dbscan_results_amann_altered.json  dbscan_results_amann_noise.json  dbscan_results_amann_noise_rd.json  dbscan_results_amann_old.json  dbscan_results_amann_rd.json  gmm_results_amann_noise.json  gmm_results_amann_noise_rd.json  kmeans_amann.json  kmeans_ars.json  kmeans_results.json  (+27 more)
(+470 files in other folders)
